fixed the problem of zooming on mobile screen

--- a/css/login 2.css
+++ b/css/login 2.css
@@ -16,7 +16,7 @@ body{
 
 .login{
     width: 300px;
-    height: 500px;
+    height: 550px;
     background: rgb(52, 54, 54);
     box-shadow: 10px -10px 15px rgba(0, 0, 0, 3),
     10px 10px 15px rgba(0, 0, 0, 3);
@@ -68,13 +68,13 @@ input{
 }
 
 p{
-    margin: 10px 0px;
+    margin: 6px 0px;
     font-size: 18px;
 }
 
 input[type="submit"]{
     width: 150px;
-    margin-top: 20px;
+    margin: 30px auto;
 }
 
 span{
